--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
 
 img {
   width: 50px;
-  margin-bottom: 1.3rem;
+  margin-bottom: 1.2rem;
 }
 
 li {
@@ -30,12 +30,12 @@ p {
 }
 
 h2 {
-  margin-bottom: 0;
+  margin: 0;
   font-size: 1.5rem;
 }
 
 .card {
-  margin: 0 0 1.3rem;
+  margin: 0 0 1rem;
 }
 
 .card-body {
@@ -61,10 +61,6 @@ h2 {
     margin: 0.5em 0.5em 0 0;
     display: inline-block;
     vertical-align: middle;
-  }
-
-  h2 {
-    margin-top: 0;
   }
 
   .card-body {
