--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,16 @@
-@-moz-viewport { width: device-width; scale: 1; }
-@-ms-viewport { width: device-width; scale: 1; }
-@-o-viewport { width: device-width; scale: 1; }
-@-webkit-viewport { width: device-width; scale: 1; }
-@viewport { width: device-width; scale: 1; }
-
 html {
+  @-moz-viewport { width: device-width; scale: 1; }
+  @-ms-viewport { width: device-width; scale: 1; }
+  @-o-viewport { width: device-width; scale: 1; }
+  @-webkit-viewport { width: device-width; scale: 1; }
+  @viewport { width: device-width; scale: 1; }
   font-family: sans-serif;
   line-height: 1.3;
 }
 
 img {
   width: 50px;
-  margin-bottom: 1.2rem;
+  margin-bottom: 1.1rem;
 }
 
 li {
@@ -35,7 +34,7 @@ h2 {
 }
 
 .card {
-  margin: 0 0 1rem;
+  margin: 0 0 .5rem;
 }
 
 .card-body {
@@ -58,7 +57,7 @@ h2 {
   }
 
   img {
-    margin: 0.5em 0.5em 0 0;
+    margin: .5em .5em 0 0;
     display: inline-block;
     vertical-align: middle;
   }
@@ -79,11 +78,12 @@ h2 {
   html {
     font-size: 110%;
     line-height: 1.4;
+    margin: 0 0 0 0.75em;
   }
 
-  .card-img {
-    max-width: 20%;
-    margin: 0 5em 0 7em;
+  img {
+    max-width: 30%;
+    margin: 0.5em 5em 1.5em 4em;
   }
 
   body {
@@ -94,9 +94,12 @@ h2 {
     margin: 0;
   }
 
+  .card-body {
+    width: 95%;
+  }
+
   .card {
     width: 33.3333%;
-    float: left;
   }
 
   p {
