--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,10 @@ html {
   @-o-viewport { width: device-width; scale: 1; }
   @-webkit-viewport { width: device-width; scale: 1; }
   @viewport { width: device-width; scale: 1; }
-  font-family: sans-serif;
-  line-height: 1.3;
 }
 
 img {
+  display: block;
   width: 50px;
   margin-bottom: 1.1rem;
 }
@@ -26,11 +25,15 @@ ul {
 
 p {
   margin-top: 0;
+  font-family: sans-serif;
+  line-height: 1.3;
 }
 
 h2 {
   margin: 0;
   font-size: 1.5rem;
+  font-family: sans-serif;
+  line-height: 1.3;
 }
 
 .card {
@@ -78,12 +81,15 @@ h2 {
   html {
     font-size: 110%;
     line-height: 1.4;
-    margin: 0 0 0 0.75em;
+  }
+
+  li {
+    margin: 0;
   }
 
   img {
     max-width: 30%;
-    margin: 0.5em 5em 1.5em 4em;
+    margin: 0;
   }
 
   body {
@@ -95,11 +101,16 @@ h2 {
   }
 
   .card-body {
-    width: 95%;
+    width: 90%;
+  }
+
+  li.card {
+    margin-right: 0;
   }
 
   .card {
-    width: 33.3333%;
+    width: 30%;
+    display: inline-block;
   }
 
   p {
